<resources>

    <!-- /////////////// NAVBAR String values \\\\\\\\\\\\\\\ -->

    <string name="title_home">Home</string>

    <string name="title_dashboard">Terms And Conditions</string>

    <string name="title_notifications">Notifications</string>


    <!-- /////////////// FIRST PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="app_name">TDM Advance</string>

    <string name="home_display">Please select START to begin the verification process!</string>

    <string name="home_button_text">START</string>


    <!-- /////////////// SECOND PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="header_text">Terms And Conditions</string>

    <string name="checkbox_dec">I Agree To The Terms And Conditions</string>

    <string name="terms_and_cons">View the Terms And Conditions <a href="https://www.tgpdc.com/">Here</a></string>

    <string name="button_2_text">BEGIN</string>

    <string name="terms_and_conditions_full">These Terms and Conditions constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and TDM, concerning your access to and use of the Application as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto.
You agree that by accessing the TDM App, you have read, understood, and agree to be bound by all of these Terms and Conditions. If you do not agree with all of these Terms and Conditions, then you are expressly prohibited from using the Site and you must discontinue use immediately.
Supplemental terms and conditions or documents that may be posted on the TDM App from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms and Conditions at any time and for any reason.
We will alert you about any changes by updating the “Last updated” date of these Terms and Conditions, and you waive any right to receive specific notice of each such change.
It is your responsibility to periodically review these Terms and Conditions to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms and Conditions by your continued use of the Site after the date such revised Terms and Conditions are posted.
The information provided on the TDM App is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country.
Accordingly, those persons who choose to access the TDM App from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.
These terms and conditions were generated by Termly’s Terms and Conditions Generator.
Persons under the age of 18 are not permitted to register or use the TDM App.</string>


    <!-- /////////////// FIRST VERIFICATION PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="finance_amount">Please Select Your Desired Amount</string>

    <string-array name="loan_list_array">
        <item>R100</item>
        <item>R200</item>
        <item>R300</item>
        <item>R400</item>
        <item>R500</item>
        <item>R600</item>
        <item>R700</item>
        <item>R800</item>
        <item>R900</item>
        <item>R1000</item>
    </string-array>

    <string name="first_ver_button">NEXT</string>

    <string name="phone_number">Please Enter Your Phone Number</string>

    <string name="id_photo">Take Picture Of ID Book</string>

    <string name="proof_of_address_photo">POA Photo</string>


    <!-- /////////////// THIRD PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="first_name">Enter First Name</string>

    <string name="surname">Enter Surname</string>

    <string name="email_address">Enter Email Address</string>

    <string name="id_number">Enter ID Number</string>

    <string name="next_button">NEXT</string>

    <!--    <string name="show_button">SHOW</string>-->


    <!-- /////////////// FOURTH PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="bank_dropdown">Select Your Bank</string>

    <string-array name="bank_names_array">
        <item>FNB</item>
        <item>ABSA</item>
        <item>NEDBANK</item>
        <item>STANDARD BANK</item>
        <item>CAPITEC</item>
        <item>TYME BANK</item>
    </string-array>

    <string name="acc_num">Enter Your Account Number</string>

    <string name="branch_code">Enter Your Branch Code</string>

    <string name="verifyButton">SUBMIT</string>


    <!-- /////////////// FIFTH PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="first_name_view">First Name:</string>

    <string name="surname_view">Surname:</string>

    <string name="email_view">Email Address:</string>

    <string name="phone_number_view">Phone Number:</string>

    <string name="id_number_view">ID Number:</string>

    <string name="bank_name_view">Bank Name:</string>

    <string name="bank_acc_num_view">Bank Account Number:</string>

    <string name="bank_branch_code_view">Bank Branch Code:</string>

    <string name="loan_amount_view">Loan Amount:</string>

    <string name="user_info_display">Please ensure that all the information displayed above is correct.
        You may click on "VERIFY" to process your application.</string>

    <string name="finalVerificationButton">VERIFY</string>


    <!-- /////////////// SIXTH PAGE String values \\\\\\\\\\\\\\\ -->

    <string name="application_msg1">To the respected applicant, your details were successfully captured and
    a verification check has been done using the details that you have provided us.</string>

    <string name="application_msg_prov_approved">Upon further validation of your application, the status of
    your application has been provisionally approved. You may take your amount from the teller or wait for a
    representative to get back to you.</string>

    <string name="application_msg_pending">Upon further validation of your application, the status of
    your application is currently pending. A representative will be in contact with you in the next couple of
        days.</string>

    <string name="application_msg_declined">Upon further validation of your application, we regret to inform
        you that the status of your application has been declined.</string>

    <string name="application_msg_null">Your application encountered an error when validating. There could be a
        problem with your credit score in which you would need to check it with either Experian or ClearScore. If you feel like
        there has been a mistake, you can apply again or inquiry further.</string>

    <string name="button_pending">PENDING</string>

    <string name="button_approved">APPLY</string>


    <!-- /////////////// SEVENTH PAGE String values \\\\\\\\\\\\\\\ -->


<!--  Code written and Compiled by Thulani Jr Langa.
      Contact Details: thulanilanga@yahoo.com or thulanilangajr@gmail.com -->

</resources>